fixed padding of margin on mobile -fixed comment regarding nyxl text

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -306,6 +306,10 @@ input {
 
 	/* Margins */
 
+	#banner {
+		padding-top: 5%;
+	}
+
 	.container-fluid-1280,
 	.row,
 	.container-fluid-1280 .row {
