--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -28,7 +28,7 @@
 	.sign-in {
 		a {
 			color: #FFF;
-			font-family: sans-serif;
+			font-family: $link-text;
 			letter-spacing: 2px;
 			text-transform: uppercase;
 		}
@@ -66,7 +66,7 @@
 
 	.navbar {
 		background: $nyred-color;
-		font-family: sans-serif;
+		font-family: $link-text;
 		font-size: larger;
 		letter-spacing: 2px;
 		text-transform: uppercase;
@@ -104,7 +104,7 @@
 		margin: 12px 0 12px 6px;
 	}
 
-	/* NYXL in header (font-family: "sans-serif") */
+	/* NYXL in header */
 
 	#heading .site-name {
 		background: $nyred-color;
